--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
         "react-dom": "17.0.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "4.0.3",
-        "styled-components": "^5.3.5"
+        "styled-components": "^5.3.5",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "typescript": "3.3.3"
